# gxkb

./: .gitignore  .travis.yml  AUTHORS  CREDITS  Makefile.am  NEWS  README.md  TODO  autogen.sh  common.h  config.h.in  configure.ac  gxkb.c  index.html  params.json  xkb-callbacks.c  xkb-callbacks.h  xkb-config.c  xkb-config.h  xkb-util.c  xkb-util.h
data/: Makefile.am  gxkb.desktop  gxkb.xpm
data/flags/: Makefile.am
debian/: changelog  control  copyright  docs  files  gxkb.1  gxkb.desktop  gxkb.install  gxkb.manpages  gxkb.xpm  rules  watch
doc/: AUTHORS  Makefile.am  NEWS
images/: Makefile.am
man/: Makefile.am  gxkb.1
src/: Makefile.am  gxkb.c  statusicon.c  statusicon.h  xkb-callbacks.c  xkb-callbacks.h  xkb-config.c  xkb-config.h  xkb-util.c  xkb-util.h
