imagesdir = @datarootdir@/gxkb/flags
images_DATA = \
    am.png    \
    bg.png    \
    by.png    \
    cz.png    \
    de.png    \
    ee.png    \
    gb.png    \
    es.png    \
    fi.png    \
    fr.png    \
    ge.png    \
    gr.png    \
    hr.png    \
    hu.png    \
    is.png    \
    it.png    \
    kz.png    \
    lt.png    \
    lv.png    \
    no.png    \
    pl.png    \
    pt.png    \
    ro.png    \
    ru.png    \
    se.png    \
    si.png    \
    sk.png    \
    sr.png    \
    ua.png    \
    us.png    \
    uz.png    \
    zz.png

EXTRA_DIST = $(images_DATA)
